syntax = "proto3";

option go_package = "./;hello";

package hello;

service Hello {
  rpc SayHello (SayHelloReq) returns (SayHelloRsp) {}
}

message SayHelloReq {
  string name = 1;
}

message SayHelloRsp {
  string message = 1;
}